# zarr-matlab

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  PLAN.md  README.md  index.html  mkdocs.yml  run_tests.m  sitemap.xml
+zarr/: Array.m  Group.m  consolidate_metadata.m  create.m  create_group.m  delete_node.m  group.m  open.m
+zarr/+codecs/: BloscCodec.m  BytesCodec.m  Codec.m  Crc32cCodec.m  DeltaCodec.m  GzipCodec.m  Pipeline.m  ShardingCodec.m  ShuffleCodec.m  TransposeCodec.m  VlenBytesCodec.m  VlenCodec.m  VlenUtf8Codec.m  ZlibCodec.m  ZstdCodec.m  from_config.m
+zarr/+codecs/private/: CMakeLists.txt  Makefile  blosc_compress.cpp  blosc_decompress.cpp  build_zstd.m  delete_if_exists.m  zstddmex.c  zstdmex.c
+zarr/+core/: Array.m  ArrayMetadata.m  Attributes.m  ChunkGrid.m  CodecPipeline.m  Group.m  Indexer.m  Store.m
+zarr/+errors/: ArrayError.m  CodecError.m  GroupError.m  MetadataError.m  PathError.m  ReadOnlyError.m  StoreError.m  ZarrError.m
+zarr/+internal/: chunk_intersections.m  complete_codecs.m  crc32c.m  decode_fill_value.m  decode_fixed_utf32.m  decode_scalar_field.m  decode_structured.m  default_scalar_fill_value.m  default_structured_fill_value.m  dtype_info.m  encode_fill_value_json.m  encode_fixed_utf32.m  encode_scalar_field.m  encode_structured.m  ensure_parents.m  fill_array.m  fill_blosc_typesize.m  gzip_java.m  half2single.m  hex2uint64.m  json_object_entries.m  mshape.m  normalize_dtype.m  normalize_path.m  parse_int64_token.m  resolve_relative.m  resolve_store.m  single2half.m  zlib_java.m
+zarr/+metadata/: ArrayMetadata.m  GroupMetadata.m
+zarr/+storage/: DirectoryStore.m  FileStore.m  MemoryStore.m  Store.m
+zarr/+stores/: HttpStore.m  LocalStore.m  ManifestStore.m  MemoryStore.m  Store.m  ZipStore.m
.github/actions/native-libs/: action.yml
.github/workflows/: build-mex.yml  ci.yml  docs.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  quickstart.md
docs/user-guide/: arrays.md  compression.md  data-types.md  python-interop.md  sharding.md  storage.md
examples/: README.md  basic_usage.m  getting_started.m  python_interop.m
mex/: blosc_mex.c  crc32c_mex.c  zstd_mex.c
quickstart/: index.html
search/: search_index.json
tests/: CountingStore.m  TestArray.m  TestCodecs.m  TestDocs.m  TestHttpStore.m  TestInternals.m  TestManifestStore.m  TestMetadata.m  TestPythonInterop.m  TestSharding.m  TestStructuredDtype.m  TestVlen.m  TestZipAndConsolidated.m  run_coverage.m  test_array_indexing.m  test_array_indexing_debug.m  test_blosc_codec.m  test_chunk_grid.m  test_codec.m  test_delta_codec.m  test_group.m  test_gzip_codec.m  test_indexer.m  test_indices.m  test_interface.m  test_memory_store.m  test_python_compat.m  test_shuffle_codec.m  test_store.m  test_zstd_codec.m  test_zstd_python_compat.m  write_delta_test_data.py  write_shuffle_test_data.py
tools/: ProbeLocalStore.m  announcement_drafts.md  bench.m  blog_post_draft.md  build_mex.m  disp_check.m  interop_cases.py  interop_matlab.m  interop_pattern.m  interop_verify.py  interop_write.py  m5_check.m  m5_python.py  mex_smoke.m  package_toolbox.m  run_tests.m  smoke.m  vlen_check.m
user-guide/arrays/: index.html
user-guide/compression/: index.html
user-guide/data-types/: index.html
user-guide/python-interop/: index.html
user-guide/sharding/: index.html
user-guide/storage/: index.html
